package vkr.osago.claims.dto;

public record RejectRequest(
        String decisionComment
) {}