package vkr.osago.claims.entity;

public enum AccidentType {
    COLLISION,
    TREE_FALL,
    OBSTACLE_HIT,
    THEFT,
    OTHER
}
