package vkr.osago.claims.entity;

public enum ClaimStatus {
    NEW, IN_REVIEW, NEED_INFO, APPROVED, REJECTED, CLOSED
}
